--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Calc</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="title_home">Home</string>
 
